--- a/app/src/main/res/layout/fragment_fragment_two.xml
+++ b/app/src/main/res/layout/fragment_fragment_two.xml
@@ -5,9 +5,9 @@
     tools:context="com.chrisrisner.fragmentsample.FragmentTwo">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <WebView
+        android:id="@+id/WebView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment_two" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
